--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -17,6 +17,7 @@
     font-weight: 500;
     font-size: 20px;
     margin-left: 30px;
+    margin-top: 10px;
 }
 
 .trip-button{
@@ -29,4 +30,5 @@
     padding-right: 10px;
     padding-bottom: 10px;
     cursor: pointer;
+    margin-top: 10px;
 }
