--- a/frontend/src/components/Register/index.css
+++ b/frontend/src/components/Register/index.css
@@ -44,4 +44,10 @@
     border-radius: 10px;
     padding: 10px 20px;
     margin: 10px;
+    cursor: pointer;
+}
+
+.register-status{
+    color: green;
+    margin-top: 20px;
 }
